Fix spacing between network icons on small screens

--- a/files/css/rlmuraya.scss
+++ b/files/css/rlmuraya.scss
@@ -51,10 +51,6 @@ a:hover {
   text-decoration: none;
 }
 
-.section {
-  margin-bottom: 40px;
-}
-
 h1 {
   font-weight: bold;
   margin: 10px auto 33px;
@@ -64,6 +60,7 @@ h1 {
   color: $gray;
   font-size: ceil(($font-size-base * 1.25));
   line-height: 1;
+  margin-bottom: 30px;
   p {
     margin: 0 0 1em;
   }
@@ -72,8 +69,10 @@ h1 {
 #networks {
   @extend .list-unstyled;
   @extend .list-inline;
+  margin: 0 0 30px 0;
   li {
-    margin: 0 1em;
+    margin: 10px;
+    padding: 0;
     a {
       @extend .fa;
       @extend .fa-2x;
